# monitor-osm-domains

./: README.md
extract/: CMakeLists.txt  COMMANDS.txt  cleanup.py  extract.cpp  osmium_buffer.hpp  osmium_pbf_input_randomaccess.hpp
monosmdom_server/: .extra_words.dict  .gitignore  COMMANDS.txt  README.md  manage.py  pyproject.toml  requirements.txt  secret_config_template.py
monosmdom_server/crawl/: admin.py  logic.py  models.py  showlengths.py  tests.py  views.py
monosmdom_server/crawl/migrations/: 0001_initial.py  0002_inheritance_zlib_and_optional_end.py  0003_index_resultsuccess_filename.py  0004_negative_numbers_for_inexact_bounds.py  0005_rename_headers_zlib_resultsuccess_headers.py  0006_mark_error_type.py  0007_squatproof.py
monosmdom_server/crawl/testfiles/: sedoparking.header.raw  sedoparking.html.br
monosmdom_server/monosmdom_server/: asgi.py  common.py  settings.py  urls.py  wsgi.py
monosmdom_server/storage/: admin.py  extract_cleanup.py  logic.py  models.py  tests.py
monosmdom_server/storage/migrations/: 0001_initial.py  0002_remove_domain_is_ignored_remove_url_in_osm_data.py  0003_ensure_url_uniqueness.py  0004_occurrence_in_osm_nicer_name.py  0005_remove_crawl_result_models.py  0006_log_imports_as_table.py  0007_add_constraint_unique_domain_name.py  0008_increase_maximum_url_length.py  0009_deduplicate_disasterurl.py  0010_alter_disasterurl_one_to_one_on_url.py  0011_store_long_lat.py
monosmdom_server/webui/: .gitignore  logic.py  models.py  views.py
monosmdom_server/webui/migrations/: 0001_initial.py
(+11 files in other folders)
